--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "intersects": "^2.7.2",
     "phaser": "^3.55.2",
+    "phaser3-rex-plugins": "^1.1.71",
     "point-in-polygon": "^1.1.0",
     "socket.io": "^4.2.0",
     "socket.io-client": "^4.5.1",
