--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "an-array-of-english-words": "^2.0.0",
+    "axios": "^0.27.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "intersects": "^2.7.2",
